2007-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thctype.h:
	* src/thcell/thcell.c:
	* src/thcoll/cweight.c:
	* src/thcoll/cweight.h:
	* src/thcoll/thcoll.c:
	* src/thctype/thctype.c:
	* src/thctype/wtt.c:
	* src/thinp/thinp.c:
	* src/thrend/thrend.c:
	* src/thstr/thstr.c:
	* src/thwchar/thwchar.c:
	* src/thwstr/thwstr.c: Update my e-mail address.

2007-10-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/libthai.def: List only symbols in plain format, for Mac build.
	Thanks Vee Satayamas for the report.

	* src/Makefile.am: Add libthai.def as libthai_la_DEPENDENCIES.

2007-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS:
	=== Version 0.1.9 ===

2007-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/test_thbrk.c (main), tests/test_thwbrk.c (main): Update check
	values, according to the new compound words support.

2007-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* doc/Doxyfile.in: Update for doxygen 1.5.3.

2007-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (O Ang - Ho Nokhuk)

	* data/tdict-{common,spell}.txt: Add words.

2007-08-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Ho Hip)

	* data/tdict-{common,geo}.txt: Add words.

2007-08-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (So Sua)

	* data/tdict-{common,district,geo,spell}.txt: Add words.

2007-07-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Wo Waen - So Rusi)

	* data/tdict-{common,ict,scicence,spell}.txt: Add words.

2007-07-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add