@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.36 2007-06-08 05:52:12 thep Exp $
+# $Id: configure.in,v 1.37 2008-06-24 14:51:12 thep Exp $
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
@@ -97,12 +97,23 @@ AC_SUBST(htmldocdir)
 
 AM_CONDITIONAL(ENABLE_DOXYGEN_DOC,test "x$enable_doxygen_doc" = "xyes")
 
+dnl dictionary data generation
+AC_ARG_ENABLE(dict,
+              [AC_HELP_STRING([--disable-dict],
+                              [disable dictionary data generation])],
+              , enable_dict="yes")
+
+if test "x$enable_dict" = "xyes"; then
+  AC_CHECK_PROGS(TRIETOOL,trietool,no)
+  if test "x$TRIETOOL" = "xno"; then
+    AC_MSG_ERROR([You need trietool (from libdatrie package) to generate dict, or just use --disable-dict to skip])
+  fi
+fi
+
+AM_CONDITIONAL(ENABLE_DICT,test "x$enable_dict" = "xyes")
+
 dnl Checks for libraries.
 PKG_CHECK_MODULES(DATRIE,datrie)
-AC_CHECK_PROGS(TRIETOOL,trietool,no)
-if test "x$TRIETOOL" = "xno"; then
-  AC_MSG_ERROR([You need trietool (from datrie package)])
-fi
 
 dnl Checks for header files.
 AC_CHECK_HEADERS([stddef.h stdlib.h string.h wchar.h])
