@@ -1,3 +1,8 @@
+2008-06-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* configure.in, Makefile.am: Add --disable-dict option to prevent
+	dictionary data generation.
+
 2007-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* include/thai/thctype.h:
@@ -1471,13 +1476,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.155 2007-10-18 14:52:28 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.156 2008-06-24 14:51:12 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.155 2007-10-18 14:52:28 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.156 2008-06-24 14:51:12 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
